tests/miniJava/neg/005273_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] static ( ) { return 0 ; } }
